--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,19 @@
 </head>
 
 <body>
-  {{{body}}}
+  <header>
+    <nav class="navbar navbar-dark bg-primary justify-content-between">
+      <a class="navbar-brand" href="/">Todo List</a>
+      {{#if isAuthenticated}}
+      <a href="/users/logout" class="btn btn-outline-light">Logout</a>
+      {{else}}
+      <a href="/users/login" class="btn btn-outline-light">Login</a>
+      {{/if}}
+    </nav>
+  </header>
+  <div class="container mt-3">
+    {{{body}}}
+  </div>
 
   <!-- include javascript files here -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
