--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -6,7 +6,7 @@
   <title>Todo List</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- link css files here -->
-  <link rel="stylesheet" href="https://bootswatch.com/4/yeti/bootstrap.min.css">
+  <link rel="stylesheet" href="https://bootswatch.com/4/flatly/bootstrap.min.css">
   <script src="https://kit.fontawesome.com/d6a5f34e06.js"></script>
 </head>
 
